[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Kitchen/KitchenRoom_Base.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/KitchenObjects/SelectableStove.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Flame2D/FlameActivity.png" type="Texture" id=3]
[ext_resource path="res://Assets/Flame2D/CeilingCorners.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButton_Right.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButton_Down.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButton_Left.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/MenuTooltips.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Flame2D/FlameBase.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Kitchen.gd" type="Script" id=10]
[ext_resource path="res://Assets/UI/UI_NinePatch.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Objects/KitchenObjects/SelectableWateringCan.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Randomiser"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.6, 2.3, 2.9, 3.4, 3.8, 4.9, 5.5, 6.4, 7.1, 7.7, 8.3, 8.8, 9.3, 9.8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.22, 0.5, 0.44, 0.66, 0.8, 0.2, 0.6, 0.4, 0.8, 0.5, 0.75, 0.4, 0.9, 0.2, 0.4, 0.1, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Randomiser"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../ActivityLight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.4, 2, 2.5, 3.3, 3.7, 4.3, 4.8, 5.3, 5.8, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 2.0, -4.0, 13.0, 3.0, -4.0, 2.0, -10.0, -1.0, 8.0, 3.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "SlowBob"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 16, 218 ), Vector2( 16, 230 ), Vector2( 16, 218 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MoveButtonRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1210, 218 ), Vector2( 1210, 230 ), Vector2( 1210, 218 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../MoveButtonDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 511, 622 ), Vector2( 511, 628 ), Vector2( 511, 622 ) ]
}

[node name="Kitchen" type="Node2D"]
script = ExtResource( 10 )

[node name="DefaultElements" type="Node2D" parent="."]

[node name="UIElements" type="Control" parent="DefaultElements"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPrompts" type="Control" parent="DefaultElements"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Firelight" type="Node2D" parent="DefaultElements"]

[node name="BaseLight" type="Light2D" parent="DefaultElements/Firelight"]
position = Vector2( 1280, 0 )
scale = Vector2( -1.2, 1 )
texture = ExtResource( 9 )
offset = Vector2( 640, 360 )
color = Color( 0.901961, 0.482353, 0.172549, 1 )
range_z_max = 10

[node name="BaseLightRandomiser" type="AnimationPlayer" parent="DefaultElements/Firelight/BaseLight"]
anims/Randomiser = SubResource( 1 )

[node name="CeilingSubtractive" type="Light2D" parent="DefaultElements/Firelight"]
texture = ExtResource( 4 )
offset = Vector2( 640, 360 )
mode = 1
range_z_max = 10
range_layer_max = 1

[node name="ActivityLight" type="Light2D" parent="DefaultElements/Firelight"]
position = Vector2( 700, 360 )
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
color = Color( 0.901961, 0.482353, 0.172549, 1 )
range_z_max = 10

[node name="ActivityLightRandomiser" type="AnimationPlayer" parent="DefaultElements/Firelight/ActivityLight"]
root_node = NodePath("../../BaseLight")
anims/Randomiser = SubResource( 2 )

[node name="Sprites" type="Node2D" parent="DefaultElements"]

[node name="OutsideSprite" type="Sprite" parent="DefaultElements/Sprites"]
light_mask = 16
z_index = -1
centered = false

[node name="BaseSprite" type="Sprite" parent="DefaultElements/Sprites"]
texture = ExtResource( 1 )
centered = false

[node name="DetailsSprite" type="Sprite" parent="DefaultElements/Sprites"]

[node name="MovementButtons" type="Node2D" parent="DefaultElements"]

[node name="MoveButtonLeft" parent="DefaultElements/MovementButtons" instance=ExtResource( 7 )]
light_mask = 0
position = Vector2( 16, 218 )
z_index = 20

[node name="MoveButtonRight" parent="DefaultElements/MovementButtons" instance=ExtResource( 5 )]
light_mask = 0
position = Vector2( 1210, 218 )
z_index = 20

[node name="MoveButtonDown" parent="DefaultElements/MovementButtons" instance=ExtResource( 6 )]
light_mask = 0
position = Vector2( 511, 622 )
z_index = 20

[node name="SlowBob" type="AnimationPlayer" parent="DefaultElements/MovementButtons"]
root_node = NodePath("../MoveButtonLeft")
anims/SlowBob = SubResource( 4 )

[node name="GameObjects" type="Node2D" parent="."]

[node name="SelectableStove" parent="GameObjects" instance=ExtResource( 2 )]
position = Vector2( 556, 372 )

[node name="SelectableWateringCan" parent="GameObjects" instance=ExtResource( 12 )]
position = Vector2( 190, 318 )

[node name="Tooltips" type="Control" parent="."]
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipKitchen" type="MarginContainer" parent="Tooltips"]
light_mask = 0
margin_left = 783.0
margin_top = 118.0
margin_right = 1183.0
margin_bottom = 267.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipRect" type="NinePatchRect" parent="Tooltips/TooltipKitchen"]
light_mask = 0
margin_right = 400.0
margin_bottom = 149.0
texture = ExtResource( 11 )
region_rect = Rect2( -0.109245, -0.00251293, 72.0668, 72.1922 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Tooltips/TooltipKitchen"]
light_mask = 0
margin_right = 400.0
margin_bottom = 149.0
mouse_filter = 2

[node name="TooltipLabel" type="Label" parent="Tooltips/TooltipKitchen/CenterContainer"]
light_mask = 0
margin_left = 12.0
margin_top = 10.0
margin_right = 387.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_shadow = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_fonts/font = ExtResource( 8 )
text = "You will need to carry things between cabin
locations. You can't just put the watering
can down anywhere! The arrows will tell
you where your attention is needed."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
